--- a/LevadS/LevadS.csproj
+++ b/LevadS/LevadS.csproj
@@ -17,6 +17,7 @@
         <Version>0.4.0-beta</Version>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
