--- a/LevadS.Abstractions/LevadS.Abstractions.csproj
+++ b/LevadS.Abstractions/LevadS.Abstractions.csproj
@@ -18,6 +18,7 @@
         <Version>0.4.0-beta</Version>
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
     <ItemGroup>
